WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180584
WebServiceWorkerProvider should use Cancellation error to notify DTL that it cannot handle a fetch
https://bugs.webkit.org/show_bug.cgi?id=180584
Summary
WebServiceWorkerProvider should use Cancellation error to notify DTL that it ...
youenn fablet
Reported
2017-12-08 08:31:37 PST
WebServiceWorkerProvider should use Cancellation error to notify DTL that it cannot handle a fetch
Attachments
Patch
(3.40 KB, patch)
2017-12-08 08:34 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-12-08 08:34:29 PST
Created
attachment 328816
[details]
Patch
Alex Christensen
Comment 2
2017-12-08 14:15:06 PST
Comment on
attachment 328816
[details]
Patch This is an internal error, so no change in behavior except what's logged to the inspector. Please investigate making a test that would've shown logs before this change.
youenn fablet
Comment 3
2017-12-08 14:24:56 PST
Filed
https://bugs.webkit.org/show_bug.cgi?id=180606
for the inspector test. Will talk to Joe to see how to do that.
WebKit Commit Bot
Comment 4
2017-12-08 14:45:26 PST
Comment on
attachment 328816
[details]
Patch Clearing flags on attachment: 328816 Committed
r225705
: <
https://trac.webkit.org/changeset/225705
>
WebKit Commit Bot
Comment 5
2017-12-08 14:45:27 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-12-08 14:46:24 PST
<
rdar://problem/35944243
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug